# domainradar-colext

./: .gitignore  README.md  build_docker_images.sh  build_images.sh  pom.xml  prepare_topics.sh  pyproject.toml  sync_result_codes.sh
collector_pipeline/: pom.xml
collector_python/: pyproject.toml
collectors-java/: .gitignore  Dockerfile  collector.example.properties  connect.Dockerfile  example.env  pom.xml  tests.Dockerfile  tests.compose.yml
collectors-python/: .dockerignore  Dockerfile  README.md  pyproject.toml  tests.Dockerfile  tests.compose.yml
config_manager/: .gitignore  README.md  config.example.toml  config_manager_daemon.py  pyproject.toml
config_manager/config_manager/: __main__.py  codes.py  manager.py  models.py  updown_provider.py
extractor_classifier_pipeline/: pyproject.toml
extractor_classifier_pipeline/drec/: __init__.py  app.py  models.py
java/: .dockerignore  .gitignore  collector.example.properties  connect.Dockerfile  flink.Dockerfile  merger.example.properties  pom.xml  standalone.Dockerfile
java_pipeline/: .gitignore  Dockerfile  build_jar_in_docker.sh  client.example.properties  client.flink.example.properties  client.properties  components.Dockerfile  connect.Dockerfile  flink.Dockerfile  legacy.security  pom.xml  ssl-master-secrets.txt  standalone.Dockerfile  streams.Dockerfile
kafka-multiprocessor/: README.md  pyproject.toml  tests.Dockerfile  tests.compose.yml
kafka-multiprocessor/src/kafka_multiprocessor/: __init__.py  client.py  message_processor.py  util.py  worker_manager.py  worker_process.py
kafka-multiprocessor/tests/: test_standalone.py  test_util.py  test_worker_manager.py  test_worker_process.py
kafka-multiprocessor/tests/integration/: test_kafka_integration.py  test_rate_limiter_integration.py
python/: .gitignore  Dockerfile  README.md  classifier.Dockerfile  docker_entrypoint.sh  publish_one.py  pyproject.toml
python/classifier_unit/: README.md  config.example.toml  pyproject.toml
python/classifier_unit/classifier_unit/: __main__.py  classifier_impl.py  types.py  util.py  worker_process.py
python/collector/: README.md  config.example.toml  pyproject.toml
python/collector/collectors/: dns_options.py  limiter.py  processor.py  util.py
python/collector/collectors/dns/: __main__.py  dnscol.py  scanner.py
python/collector/collectors/rdap_dn/: __main__.py  rdap_dn.py
python/collector/collectors/rdap_ip/: __main__.py  rdap_ip.py
python/collector/collectors/rtt/: __main__.py  rtt.py
python/collector/collectors/whois/: __main__.py  whois.py
python/collector/collectors/zone/: __main__.py  zone.py
python/domrad_kafka_client/: config.example.toml  example.py  pyproject.toml
python/domrad_kafka_client/domrad_kafka_client/: __init__.py  client.py  message_processor.py  standalone.py  types.py  util.py  worker_manager.py  worker_process.py
python/extractor/: README.md  config.example.toml  pyproject.toml
python/extractor/extractor/: __main__.py  app.py  compat.py  extractor.py
python/extractor/extractor/transformations/: _helpers.py  drop_columns.py  geo.py  html.py  ip.py  lexical.py  rdap_dn.py  rep_dn.py  rep_ip.py  tfidf.py  tls.py
python/standalone_input/: Dockerfile  pyproject.toml
python/standalone_input/standalone_input/: loading_manager.py  models.py  mongo.py
python/standalone_input/standalone_input/loaders/: direct_loader.py  misp_loader.py  source_loader.py
python_pipeline/: .gitignore  Dockerfile  README.md  build_all_images.sh  classifier.Dockerfile  config.example.toml  generate_schemas.py  pyproject.toml
python_pipeline/classifier/: pyproject.toml
python_pipeline/classifier/classifier_unit/: __main__.py  app.py  classifier.py  dummy_pipeline.py
python_pipeline/classifier_v2/: config.classifier_v2.example.toml  pyproject.toml
python_pipeline/classifier_v2/classifier_unit/: __main__.py  classifier_impl.py  client.py  request_handler.py  types.py  util.py  worker_process.py
python_pipeline/collector/: pyproject.toml  util.py
python_pipeline/collector/collectors/: dns_options.py  limiter.py  options.py  rdap_util.py  util.py
python_pipeline/collector/collectors/dns/: __main__.py  collector.py  dnscol.py  scanner.py
python_pipeline/collector/collectors/rdap_dn/: __main__.py  rdap_dn.py
python_pipeline/collector/collectors/rdap_ip/: __main__.py  rdap_ip.py
python_pipeline/collector/collectors/rtt/: __main__.py  rtt.py
python_pipeline/collector/collectors/zone/: __main__.py  collector.py  resolver.py  zone.py
python_pipeline/collector/rdap_dn/: __main__.py  rdap_dn.py
python_pipeline/collector/rdap_ip/: __main__.py  rdap_ip.py
python_pipeline/collector/rtt/: __main__.py  rtt.py
python_pipeline/common/: __init__.py  audit.py  custom_codecs.py  faust_util.py  log.py  loop.py  models.py  models_util.py  result_codes.py  util.py
python_pipeline/extractor/: __main__.py  app.py  compat.py  extractor.py  pyproject.toml
python_pipeline/extractor/extractor/: __main__.py  app.py  compat.py  extractor.py  incomplete_data_filter.py  output_fields.py
python_pipeline/extractor/extractor/transformations/: base_transformation.py  dns.py  drop_columns.py  geo.py  html.py  ip.py  lexical.py  rdap_dn.py  rdap_ip.py  tls.py
python_pipeline/extractor/transformations/: _helpers.py  base_transformation.py  dns.py  drop_columns.py  geo.py  ip.py  lexical.py  rdap_dn.py  rdap_ip.py  tls.py
python_support/: pyproject.toml
python_support/src/drce_collectors/: __init__.py  dns.py
python_support/tests/: __init__.py
schemas/: cz.vut.fit.domainradar.models.IPToProcess.avsc  cz.vut.fit.domainradar.models.dns.CNAMERecord.avsc  cz.vut.fit.domainradar.models.dns.DNSData.avsc  cz.vut.fit.domainradar.models.dns.IPFromDNS.avsc  cz.vut.fit.domainradar.models.dns.MXRecord.avsc  cz.vut.fit.domainradar.models.dns.NSRecord.avsc  cz.vut.fit.domainradar.models.dns.SOARecord.avsc  cz.vut.fit.domainradar.models.dns.ZoneInfo.avsc  cz.vut.fit.domainradar.models.ip.GeoIPData.avsc  cz.vut.fit.domainradar.models.ip.NERDData.avsc  cz.vut.fit.domainradar.models.ip.RTTData.avsc  (+18 more)
(+466 files in other folders)
