[project]
name = "thor-collectors"
version = "1.0.0"
description = "A suite of domain-related data collectors for threat intelligence applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncwhois >=1.1.12",
    "whodap >=0.1.14",
    "icmplib >=3.0.4",
    "tldextract >=5.3.1",
    "dnspython >=2.8.0",
    "pydantic >=2.12.5",
    "kafka-multiprocessor",
]

[tool.uv.workspace]
members = [
    "kafka-multiprocessor",
]

[tool.uv.sources]
kafka-multiprocessor = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest >=9.0.2",
    "ruff >=0.14.10",
    "pytest-asyncio >=1.3.0"
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
