[project]
name = "kafka-multiprocessor"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka >=2.12.2",
    "sortedcontainers >=2.4.0",
    "pyrate-limiter >=3.9.0",
    "redis >=6.2.0"
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"