[project]
name = "kafka-multiprocessor"
version = "1.0.0"
description = "Library for heavily parallel Kafka message load-transform-publish processing using multiple processes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka >=2.13.0",
    "sortedcontainers >=2.4.0",
    "pyrate-limiter >=3.9.0",
    "redis >=6.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0.0",
    "pytest-asyncio >=1.3.0"
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
