[tool.poetry]
package-mode = false
name = "domrad-python"
version = "0.1.0"
description = "The DomainRadar Python pipeline – a meta package"
authors = ["Ondřej Ondryáš <xondry02@stud.fit.vut.cz>"]
license = "MIT"
repository = "https://github.com/nesfit/domainradar-colext"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
domrad-python-classifier-unit = { path = "./classifier/", develop = true }
domrad-python-collectors = { path = "./collector/", develop = true }
domrad-python-extractor = { path = "./extractor/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
