[tool.poetry]
package-mode = true
name = "domrad-python-classifier-unit"
version = "0.2.0"
description = "DomainRadar Python pipeline – the classifier unit"
authors = ["Ondřej Ondryáš <xondry02@stud.fit.vut.cz>"]
license = "MIT"
repository = "https://github.com/nesfit/domainradar-colext"
readme = "README.md"
packages = [
    { include = "classifier_unit" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
# classifiers = { git = "https://github.com/nesfit/domainradar-clf.git", branch = "main" }
classifiers = { path = "../classifiers", develop = true }
pyarrow = "^16.1.0"
domrad-kafka-client = { path = "../domrad_kafka_client", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
