[tool.poetry]
name = "domrad-kafka-client"
version = "1.0.0"
description = ""
authors = ["Ondřej Ondryáš <iondryas@fit.vut.cz>"]
readme = "README.md"
license = "BSD-3-Clause"

packages = [
    { include = "domrad_kafka_client" }
]

[tool.poetry.dependencies]
python = ">=3.11"
confluent-kafka = "^2.7.0"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
