[tool.poetry]
package-mode = true
name = "domrad-python-classifier-unit"
version = "0.1.0"
description = "DomainRadar Python pipeline – the classifier unit"
authors = ["Ondřej Ondryáš <xondry02@stud.fit.vut.cz>"]
license = "MIT"
repository = "https://github.com/nesfit/domainradar-colext"
readme = "README.md"
packages = [
    { include = "classifier_unit" },
    { include = "common", from = ".." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
faust-streaming = { extras = ["rocksdict"], version = "^0.11.0" }
pandas = "^2.2.2"
classifiers = { git = "https://github.com/nesfit/domainradar-clf.git", branch = "main" }
pyarrow = "^15.0.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
