[tool.poetry]
package-mode = true
name = "domrad-python-collectors"
version = "0.1.0"
description = "DomainRadar Python pipeline – collectors"
authors = ["Ondřej Ondryáš <xondry02@stud.fit.vut.cz>"]
license = "MIT"
repository = "https://github.com/nesfit/domainradar-colext"
readme = "README.md"
packages = [
    { include = "collectors" },
    { include = "common", from = ".." }
]

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = { extras = ["zstd"], version = "^0.10.0" }
faust-streaming = { extras = ["rocksdict"], version = "^0.11.0" }
asyncwhois = "^1.1.3"
whodap = "^0.1.12"
icmplib = "^3.0.4"
tldextract = "^5.1.2"
whoisit = "^2.7.6"
aiolimiter = "^1.1.0"
dnspython = "^2.6.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
